# Imgui_Template_Cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/example_app/: CMakeLists.txt  main.cpp
src/example_app/include/ui_layers/: main_menu_bar.h  render_scene.h
src/example_app/ui_layers/: main_menu_bar.cpp  render_scene.cpp
src/gui_core/: CMakeLists.txt  ConfigFile.json
src/gui_core/core/: application.cpp  imgui_context.cpp  window.cpp
src/gui_core/core/fonts/: roboto_bold.h  roboto_italic.h  roboto_regular.h
src/gui_core/include/core/: application.h  imgui_context.h  layer.h  window.h
src/gui_core/include/renderer/: texture.h
src/gui_core/include/utilities/: image.h  settings_config.h
src/gui_core/renderer/: texture.cpp
src/gui_core/utilities/: image.cpp  settings_config.cpp
submodules/: CMakeLists.txt
submodules/glad/: CMakeLists.txt  glad.c
submodules/glad/include/glad/: glad.h
submodules/glfw/: CMakeLists.txt
submodules/imgui/: CMakeLists.txt  imgui_demo.cpp
submodules/imgui/include/: imgui.h
submodules/nlohmann_json/: CMakeLists.txt
submodules/pybind/: CMakeLists.txt
